--- a/RoomDisplay/module.html
+++ b/RoomDisplay/module.html
@@ -116,15 +116,15 @@
 <body>
     <div id="card">
         <div id="navi">
-            <i class="fa-light fa-arrow-left-to-bracket button" title="Prev" onclick="requestAction('PagePrev',true)"></i>
-            <i class="fa-light fa-arrow-up-to-bracket button" title="Back" onclick="requestAction('PageBack',true)"></i>
-            <i class="fa-light fa-arrow-right-to-bracket button" title="Next" onclick="requestAction('PageNext',true)"></i>
+            <i class="fa-light fa-arrow-left-to-bracket button" title="< Prev ]" onclick="requestAction('PagePrev',true)"></i>
+            <i class="fa-light fa-arrow-up-to-bracket button" title="[ Back ]" onclick="requestAction('PageBack',true)"></i>
+            <i class="fa-light fa-arrow-right-to-bracket button" title="[ Next >" onclick="requestAction('PageNext',true)"></i>
         </div>
         <div id="actions">
             <i class="fa-light fa-rotate-left button" title="Clear Pages" onclick="requestAction('ClearPages',true)"></i>
             <i class="fa-light fa-rotate-right button" title="Reload Pages" onclick="requestAction('ReloadPages',true)"></i>
             <i class="fa-light fa-rotate button" title="Synchronize" onclick="requestAction('Synchronize',true)"></i>
-            <i class="fa-light fa-power-off button" title="Reboot" onclick="requestAction('Restart',true)"></i>
+            <i class="fa-light fa-power-off button" title="Restart" onclick="requestAction('Restart',true)"></i>
         </div>
     </div>
     <div id="content">
